src/test/resources/amyc/typer/failing/ArithError4.grading.amy
object ArithError4
  0 / ()
end ArithError4
